# Thesis_2.0

./: .gitignore  .gitmodules
devel/: .catkin
src/Rosbag/: 2021-11-15-13-03-05.bag  Plot_AdaptiveK_Pos.py  Plot_AdaptiveK_Pos2.py  Plot_AdaptiveK_Pos3.py  Plot_AdaptiveK_Robust.py  Plot_Rosbag.py  Plot_Test1.py  Plot_Test234.py  Plot_Test24.py  Plot_Test4_alt.py  Stiffness_Plotting.py  codeSnippits.py
src/Rosbag/OldVersions/: 2021-10-22-10-32-07.bag  2021-10-22-12-21-31.bag  2021-10-29-13-27-00.bag  2021-10-29-13-27-11.bag  2021-10-29-13-28-01.bag  2021-10-29-13-29-35.bag  2021-11-04-16-17-14.bag  2021-11-04-16-26-25.bag  2021-11-04-18-06-43.bag  2021-11-05-09-45-20.bag  2021-11-05-09-49-32.bag  2021-11-08-12-28-51.bag  2021-11-08-12-29-50.bag  2021-11-08-15-02-36.bag  2021-11-08-15-41-18.bag  2021-11-08-15-59-55.bag  2021-11-09-15-22-21.bag  OldCode  output.bag
src/force_data_publisher/: CMakeLists.txt  package.xml
src/force_data_publisher/src/: listener.cpp  talker.cpp
src/giel_component/: CMakeLists.txt  package.xml
src/giel_component/src/: CMakeLists.txt  giel_component.cpp  giel_component.hpp  giel_component_functions.cpp
src/giel_etasl_application/: .gitignore  CMakeLists.txt  README.md  package.xml
src/giel_etasl_application/configuration/: Application_properties.lua  SoemMasterComponent_properties.lua
src/giel_etasl_application/launch/: load_setup_fake_joint_states_franka_panda.launch  load_setup_fake_joint_states_iiwa.launch  load_setup_fake_joint_states_kinova_gen3.launch  load_setup_fake_joint_states_lwr.launch  load_setup_franka_panda.launch  (+5 more)
(+127 files in other folders)
